# POS

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  POS_REVIEW.md  ROLE_BASED_SYSTEM_GUIDE.md  SETUP_DATABASE.sql  readme.md  setup.sql
.github/workflows/: release.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
client/docs/: DESIGN_SYSTEM.md  IMPLEMENTATION_ROADMAP.md  OFFLINE_ARCHITECTURE.md  REPORTS_IMPL_PLAN.md  USER_FLOW.md
client/public/: manifest.json
client/src/: App.css  App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs
client/src-tauri/windows/: hooks.nsh
client/src/components/: ChangePinDialog.tsx  ConnectivityIndicator.jsx  ConnectivityIndicator.tsx  CorruptionRecoveryDialog.tsx  ErrorBoundary.tsx  Navbar.jsx  Navbar.tsx  PageHeader.tsx  PageLoading.tsx  PinInput.tsx  PrinterDiagnosticsPanel.tsx  PrinterSelectDialog.tsx  ReceiptPreview.tsx  ReturnDialog.tsx  SaleDetailDialog.tsx  Sidebar.jsx  Sidebar.tsx  SplashScreen.tsx  StatCard.tsx  Toast.jsx  Toast.tsx
client/src/db/: activityLogger.ts  index.js  index.ts  repository.js  repository.ts  seed.ts  sync.js  sync.ts
client/src/hooks/: useAuth.js  useAuth.ts  usePrinter.ts  useSales.js  (+10 more)
docs/: ARCHITECTURE_OVERVIEW.md
scripts/: receipt-emulator.html  release.ps1  test-receipt.mjs
server/: .env.example  package-lock.json  package.json
server/docs/: SYNC_RELAY.md
server/src/: server.js
(+128 files in other folders)
