[package]
name = "pharmacy-pos"
version = "1.3.1"
description = "Pharmacy Point of Sale System"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json        = "1.0"
serde             = { version = "1.0", features = ["derive"] }
tauri             = { version = "=2.11.2", features = ["tray-icon", "image-png"] }
tauri-runtime     = "2"
tauri-runtime-wry = "2"
tauri-utils       = "2"
tauri-macros      = "2"
tauri-plugin-autostart       = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-thermal-printer = "2"
tauri-plugin-updater = "2"

[patch.crates-io]
plist = { git = "https://github.com/ebarnard/rust-plist", tag = "v1.8.0" }
time  = { git = "https://github.com/time-rs/time", tag = "v0.3.36", package = "time" }
